# Embedded-Programming-with-Modern-CPP-Cookbook

./: README.md
Chapter03/cache_align/: cache_align.cpp
Chapter03/enconv/: CMakeLists.txt
Chapter03/endiannes/: CMakeLists.txt
Chapter04/loop2/: CMakeLists.txt
Chapter05/loop/: loop.cpp
Chapter05/loop2/: loop.cpp
Chapter05/loop3/: loop.cpp
Chapter05/objpool/: objpool.cpp
Chapter05/shmem/: CMakeLists.txt
Chapter05/timer/: CMakeLists.txt
Chapter06/atomic/: CMakeLists.txt
Chapter06/condvar/: CMakeLists.txt
Chapter06/prealloc/: CMakeLists.txt
Chapter06/ringbuf/: ringbuf.cpp
Chapter07/async/: CMakeLists.txt
Chapter07/flat/: ipc1.cpp
Chapter07/ipc2/: CMakeLists.txt  ipc2.cpp
Chapter08/flat/: CMakeLists.txt  message_generated.h
Chapter08/i2c/: i2c.cpp
Chapter08/ipc1/: CMakeLists.txt  ipc1.cpp
Chapter08/ipc3/: CMakeLists.txt
Chapter09/pwm/: CMakeLists.txt  pwm.cpp
Chapter09/rtc/: CMakeLists.txt  rtc.cpp
Chapter1/hello/: CMakeLists.txt
Chapter10/chrono/: CMakeLists.txt
Chapter10/delays/: CMakeLists.txt  delays.cpp
Chapter10/interval/: CMakeLists.txt
Chapter10/monotonic/: CMakeLists.txt
Chapter10/timestamps/: CMakeLists.txt
Chapter10/udev/: CMakeLists.txt  udev.cpp
Chapter11/catch/: CMakeLists.txt  catch.cpp
Chapter11/chrono/: CMakeLists.txt  chrono.cpp
Chapter11/debounce/: CMakeLists.txt  debounce.cpp
Chapter11/errcode/: CMakeLists.txt  errcode.cpp
Chapter11/except/: CMakeLists.txt  except.cpp
Chapter11/heartbeat/: CMakeLists.txt  heartbeat.cpp
Chapter11/interval/: interval.cpp
Chapter11/monotonic/: CMakeLists.txt  monotonic.cpp
Chapter11/static/: CMakeLists.txt  static.cpp
Chapter11/timestamps/: CMakeLists.txt  timestamps.cpp
Chapter11/watchdog/: CMakeLists.txt  watchdog.cpp
Chapter12/array/: CMakeLists.txt  array.cpp
Chapter12/debounce/: CMakeLists.txt
Chapter12/errcode/: CMakeLists.txt
Chapter12/except/: CMakeLists.txt
Chapter12/expected/: CMakeLists.txt  expected.cpp
Chapter12/static/: CMakeLists.txt
Chapter12/watchdog/: CMakeLists.txt
Chapter13/assert/: CMakeLists.txt
Chapter13/pinthreads/: CMakeLists.txt  pinthreads.cpp
Chapter13/realtime/: CMakeLists.txt  realtime.cpp
Chapter13/returns/: CMakeLists.txt
Chapter14/assert/: CMakeLists.txt  assert.cpp
Chapter14/returns/: CMakeLists.txt  returns.cpp
Chapter15/: snippet.cpp
Chapter2/: hello_etl.cpp
Chapter2/alignment/: CMakeLists.txt  alignment.cpp
Chapter2/cache_align/: CMakeLists.txt
Chapter2/enconv/: CMakeLists.txt  receiver.cpp  sender.cpp
Chapter2/endiannes/: CMakeLists.txt  endianness.cpp
Chapter2/fixed_types/: CMakeLists.txt  fixed_types.cpp
Chapter2/packed_alignment/: CMakeLists.txt  packed_alignment.cpp
Chapter2/sizet/: CMakeLists.txt  sizet.cpp
Chapter3/isr/: isr.adb  isr.asm  isr.c  isr.cdb  isr.ihx  isr.lk  isr.lst  isr.map  isr.mem  isr.omf  isr.rel  isr.rst  isr.sym
Chapter3/serial/: serial.c
Chapter4/loop/: CMakeLists.txt
Chapter4/loop2/: CMakeLists.txt  loop.cpp
Chapter4/loop3/: CMakeLists.txt  loop.cpp
Chapter5/objpool/: CMakeLists.txt  objpool.cpp
Chapter5/prealloc/: CMakeLists.txt  prealloc.cpp
Chapter5/ringbuf/: CMakeLists.txt
Chapter5/shmem/: CMakeLists.txt  shmem.cpp
Chapter5/timer/: CMakeLists.txt  timer.cpp
Chapter6/async/: CMakeLists.txt  async.cpp
Chapter6/atomic/: CMakeLists.txt  atomic.cpp
Chapter6/condvar/: CMakeLists.txt  condvar.cpp
Chapter6/lockfree/: CMakeLists.txt  lockfree.cpp
Chapter6/memorder/: CMakeLists.txt  memorder.cpp
Chapter6/mutex/: CMakeLists.txt  mutex.cpp
Chapter6/shmatomic/: CMakeLists.txt  shmatomic.cpp
Chapter6/threads/: CMakeLists.txt  threads.cpp
Chapter7/flat/: CMakeLists.txt  message.fbs
Chapter7/ipc1/: CMakeLists.txt  ipc1.cpp
Chapter7/ipc2/: CMakeLists.txt  ipc1
Chapter7/ipc3/: CMakeLists.txt  ipc3.cpp
Chapter7/ipc4/: CMakeLists.txt  ipc4.cpp
Chapter7/stream/: CMakeLists.txt  stream.cpp
Chapter8/gpio/: CMakeLists.txt  gpio.cpp
Chapter8/gpiod/: CMakeLists.txt  gpiod.cpp
Chapter8/i2c/: CMakeLists.txt
